--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
-    
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -12,61 +12,75 @@
     <!-- My Style CSS -->
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/style.css')}}">
 
-    
     <title>A Helping Paw</title>
-  </head>
-  
-  <body>
+</head>
+
+<body>
     <div class="container-fuid bg-light">
-      <div class="container pt-5 pb-4">
-          <div class="row">
-              <div class="col-md-1 d-flex justify-content-center">
-                  <image src ="{{ url_for('static', filename='image/Logo.png')}}" width="100" height="100">
-              </div>
-              <div class="col-md-4 navbar-brand">
-                  <h1>
-                      A Helping Paw
-                  </h1>
-              </div>
-              <div class="col-md-6 col-sm-12 float-md-right"> 
-                  <!--Buttton for user to go to Homepage-->
-                  <button type="button" onclick="window.location.href='{{url_for('mysearch')}}'" class="btn-lg btn-outline-dark pr-3 float-md-right">Home Page</button>&nbsp &nbsp
-                  
-                  <!--Buttton for user to go to Sign Up page-->
-                  <button type="button" onclick="window.location.href='{{url_for('add_user')}}'" class="btn-lg btn-outline-dark pr-3 float-md-right">Sign Up</button>&nbsp &nbsp
-                          
-                  <!--Button for user to go to Log In page-->
-                  <button type="button" onclick="window.location.href='{{url_for('login')}}'" class=" btn-lg btn-outline-dark float-md-right">Login</button><br><br>
-              </div>
-          </div>
-      </div>
+        <div class="container pt-5 pb-4">
+            <div class="row">
+
+                <!-- Logo -->
+                <div class="col-md-1 d-flex justify-content-center">
+                    <image src="{{ url_for('static', filename='image/Logo.png')}}" width="100" height="100">
+                </div>
+
+                <!-- Website Name -->
+                <div class="col-md-4 navbar-brand">
+                    <h1>
+                        A Helping Paw
+                    </h1>
+                </div>
+
+                <!-- Navigation Button -->
+                <div class="col-md-6 col-sm-12 float-md-right">
+                    <!--Buttton foruser to go to Homepage-->
+                    <button type="button" onclick="window.location.href='{{url_for('mysearch')}}'" class="btn-lg btn-outline-dark pr-3 float-md-right">Home Page</button>&nbsp &nbsp
+
+                    <!--Buttton foruser to go to Sign Up page-->
+                    <button type="button" onclick="window.location.href='{{url_for('add_user')}}'" class="btn-lg btn-outline-dark pr-3 float-md-right">Sign Up</button>&nbsp &nbsp
+
+                    <!--Button for user to go to Log In page-->
+                    <button type="button" onclick="window.location.href='{{url_for('login')}}'" class=" btn-lg btn-outline-dark float-md-right">Login</button><br><br>
+                </div>
+            </div>
+        </div>
     </div>
-    
-    
-     <div class="row d-flex justify-content-center">
-          <div class="mt-5 d-none d-md-block">
-            <image src ="{{ url_for('static', filename='image/cat.jpg')}}" width="450" height="530">
-          </div>
-          
-          <div class="bg-light p-3 mt-5">
-              <!--Form for user to enter their particular to sign up account-->
-              <form action="{{ url_for('insert_user') }}" method="POST" >
-                 
-                    <h5>
-                      <label><h3>Sign Up An Account To Add Advertisment </h3></label><br><br>
-                      <label>User Name </label><br>
-                      <input id="userName" name="userName" type="text" class="form-control" required><br><br>
-                      <label>User Email </label><br>
-                      <input id="userEmail" name="userEmail" type="email" class="form-control" required><br><br>
-                      <label>User Contact </label><br>
-                      <input id="userContact" name="userContact" type="tel" class="form-control" required><br><br>
-                    </h5>
-               
-                      <!--Button to add new user account-->
-                      <button type="submit" name="action" class=" btn-lg btn-outline-dark">Sign Up</button>
-              </form>
-          </div>
-      </div>
+
+
+    <div class="row d-flex justify-content-center">
+
+        <!-- Image of Pet Cat. Display in laptopview, hide in mobile view -->
+        <div class="mt-5 d-none d-md-block">
+            <image src="{{ url_for('static', filename='image/cat.jpg')}}" width="450" height="530">
+        </div>
+
+        <div class="bg-light p-3 mt-5">
+
+            <!--Form for user to enter their particular to sign up account-->
+            <form action="{{ url_for('insert_user') }}" method="POST">
+
+                <h5>
+                    <label><h3>Sign Up An Account To Add Advertisment </h3></label><br><br>
+
+                    <!-- Textbox to key in User Name -->
+                    <label>User Name </label><br>
+                    <input id="userName" name="userName" type="text" class="form-control" required><br><br>
+
+                    <!-- Textbox to key in User Email -->
+                    <label>User Email </label><br>
+                    <input id="userEmail" name="userEmail" type="email" class="form-control" required><br><br>
+
+                    <!-- Textbox to key in User Contact Number -->
+                    <label>User Contact </label><br>
+                    <input id="userContact" name="userContact" type="tel" class="form-control" required><br><br>
+                </h5>
+
+                <!--Button to add new user account-->
+                <button type="submit" name="action" class=" btn-lg btn-outline-dark">Sign Up</button>
+            </form>
+        </div>
+    </div>
 
     <div class="mb-5"></div>
     <!-- JavaScript -->
@@ -74,5 +88,6 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  </body>
+</body>
+
 </html>
