--- a/templates/deleteAdv.html
+++ b/templates/deleteAdv.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
-    
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -12,56 +12,66 @@
     <!-- My Style CSS -->
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/style.css')}}">
 
-    
     <title>A Helping Paw</title>
-  </head>
-  
-  <body>
+</head>
+
+<body>
     <div class="container-fuid bg-light">
-      <div class="container pt-5 pb-4">
-          <div class="row">
-              <div class="col-md-1 d-flex justify-content-center">
-                  <image src ="{{ url_for('static', filename='image/Logo.png')}}" width="100" height="100">
-              </div>
-              <div class="col-md-4 navbar-brand">
-                  <h1>
-                      A Helping Paw
-                  </h1>
-              </div>
-              <div class="col-md-6 col-sm-12 float-md-right"> 
-                  <!--Buttton foruser to go to Homepage-->
-                  <button type="button" onclick="window.location.href='{{url_for('mysearch')}}'" class="btn-lg btn-outline-dark pr-3 float-md-right">Home Page</button>&nbsp &nbsp
-                  
-                  <!--Buttton foruser to go to Sign Up page-->
-                  <button type="button" onclick="window.location.href='{{url_for('add_user')}}'" class="btn-lg btn-outline-dark pr-3 float-md-right">Sign Up</button>&nbsp &nbsp
-                          
-                  <!--Button for user to go to Log In page-->
-                  <button type="button" onclick="window.location.href='{{url_for('login')}}'" class=" btn-lg btn-outline-dark float-md-right">Login</button><br><br>
-              </div>
-          </div>
-      </div>
-    </div>
-    
-    <div class="container d-flex justify-content-center p-3 mb-5">
-      <h3>
-        <!--Form to confirm delete advertisment-->
-        <form action="{{url_for('delete_adv2')}}" method="POST">
-            <div>
-                <input id="adv_id" name="adv_id" type="text" value={{adv_id}} class="d-none"><br>
-            </div> 
-             
-            <div>
-                <button type="submit" name="action">Confirm Delete?</button>
+        <div class="container pt-5 pb-4">
+            <div class="row">
+
+                <!-- Logo -->
+                <div class="col-md-1 d-flex justify-content-center">
+                    <image src="{{ url_for('static', filename='image/Logo.png')}}" width="100" height="100">
+                </div>
+
+                <!-- Website Name -->
+                <div class="col-md-4 navbar-brand">
+                    <h1>
+                        A Helping Paw
+                    </h1>
+                </div>
+
+                <!-- Navigation Button -->
+                <div class="col-md-6 col-sm-12 float-md-right">
+                    <!--Buttton for user to go to Homepage-->
+                    <button type="button" onclick="window.location.href='{{url_for('mysearch')}}'" class="btn-lg btn-outline-dark pr-3 float-md-right">Home Page</button>&nbsp &nbsp
+
+                    <!--Buttton for user to go to Sign Up page-->
+                    <button type="button" onclick="window.location.href='{{url_for('add_user')}}'" class="btn-lg btn-outline-dark pr-3 float-md-right">Sign Up</button>&nbsp &nbsp
+
+                    <!--Button for user to go to Log In page-->
+                    <button type="button" onclick="window.location.href='{{url_for('login')}}'" class=" btn-lg btn-outline-dark float-md-right">Login</button><br><br>
+                </div>
             </div>
-        </form>
-      </h3>
+        </div>
     </div>
-  
-  <div class="mb-5"></div>
+
+    <div class="container d-flex justify-content-center p-3 mb-5">
+        <h3>
+            <!--Form to confirm delete advertisment-->
+            <form action="{{url_for('delete_adv2')}}" method="POST">
+
+                <!-- Hide the user ID to prevent user to amend it -->
+                <div class="d-none">
+                    <input id="adv_id" name="adv_id" type="text" value={{adv_id}}><br>
+                </div>
+
+                <!-- Button to delete the advertisment -->
+                <div>
+                    <button type="submit" name="action">Confirm Delete?</button>
+                </div>
+
+            </form>
+        </h3>
+    </div>
+
+    <div class="mb-5"></div>
     <!-- JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  </body>
+</body>
+
 </html>
