--- a/templates/login.html
+++ b/templates/login.html
@@ -29,10 +29,10 @@
                   </h1>
               </div>
               <div class="col-md-6 col-sm-12 float-md-right"> 
-                  <!--Buttton foruser to go to Homepage-->
+                  <!--Buttton for user to go to Homepage-->
                   <button type="button" onclick="window.location.href='{{url_for('mysearch')}}'" class="btn-lg btn-outline-dark pr-3 float-md-right">Home Page</button>&nbsp &nbsp
                   
-                  <!--Buttton foruser to go to Sign Up page-->
+                  <!--Buttton for user to go to Sign Up page-->
                   <button type="button" onclick="window.location.href='{{url_for('add_user')}}'" class="btn-lg btn-outline-dark pr-3 float-md-right">Sign Up</button>&nbsp &nbsp
                           
                   <!--Button for user to go to Log In page-->
@@ -43,6 +43,8 @@
     </div>
 
         <div class="row d-flex justify-content-center">
+          
+          <!-- Image of Pet Dog. Display in laptop view, hide in mobile view -->
           <div class="mt-5 d-none d-md-block">
             <image src ="{{ url_for('static', filename='image/dog.jpg')}}" width="250" height="300">
           </div>
