--- a/templates/my_adv.html
+++ b/templates/my_adv.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
-    
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -12,72 +12,88 @@
     <!-- My Style CSS -->
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/style.css')}}">
 
-    
     <title>A Helping Paw</title>
-  </head>
-  
-  <body>
-    <div class="container-fuid bg-light">
-      <div class="container pt-5 pb-4">
-          <div class="row">
-              <div class="col-md-1 d-flex justify-content-center">
-                  <image src ="{{ url_for('static', filename='image/Logo.png')}}" width="100" height="100">
-              </div>
-              <div class="col-md-4 navbar-brand">
-                  <h1>
-                      A Helping Paw
-                  </h1>
-              </div>
-              <div class="col-md-6 col-sm-12 float-md-right"> 
-                  <!--Buttton foruser to go to Homepage-->
-                  <button type="button" onclick="window.location.href='{{url_for('mysearch')}}'" class="btn-lg btn-outline-dark pr-3 float-md-right">Home Page</button>&nbsp &nbsp
-                  
-                  <!--Buttton foruser to go to Sign Up page-->
-                  <button type="button" onclick="window.location.href='{{url_for('add_user')}}'" class="btn-lg btn-outline-dark pr-3 float-md-right">Sign Up</button>&nbsp &nbsp
-                          
-                  <!--Button for user to go to Log In page-->
-                  <button type="button" onclick="window.location.href='{{url_for('login')}}'" class=" btn-lg btn-outline-dark float-md-right">Login</button><br><br>
-              </div>
-          </div>
-      </div>
-    </div>
-    
-    <<div class="container bg-light pt-3 pb-3 mt-5">
+</head>
 
-        <!--Display the advertisment posted by the user based on User ID-->
-     
+<body>
+    <div class="container-fuid bg-light">
+        <div class="container pt-5 pb-4">
+            <div class="row">
+
+                <!-- Logo -->
+                <div class="col-md-1 d-flex justify-content-center">
+                    <image src="{{ url_for('static', filename='image/Logo.png')}}" width="100" height="100">
+                </div>
+
+                <!-- Website Name -->
+                <div class="col-md-4 navbar-brand">
+                    <h1>
+                        A Helping Paw
+                    </h1>
+                </div>
+
+                <!-- Navigation Button -->
+                <div class="col-md-6 col-sm-12 float-md-right">
+                    <!--Buttton for user to go to Homepage-->
+                    <button type="button" onclick="window.location.href='{{url_for('mysearch')}}'" class="btn-lg btn-outline-dark pr-3 float-md-right">Home Page</button>&nbsp &nbsp
+
+                    <!--Buttton for user to go to Sign Up page-->
+                    <button type="button" onclick="window.location.href='{{url_for('add_user')}}'" class="btn-lg btn-outline-dark pr-3 float-md-right">Sign Up</button>&nbsp &nbsp
+
+                    <!--Button for user to go to Log In page-->
+                    <button type="button" onclick="window.location.href='{{url_for('login')}}'" class=" btn-lg btn-outline-dark float-md-right">Login</button><br><br>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container bg-light pt-3 pb-3 mt-5">
+
+        <!--Display the advertisment posted by user based on User ID-->
         <form action="{{url_for('update_adv')}}" method="POST">
-            <div>
-                
-                {% for num in pet%}
-                    <h5>
-                        <input id="adv_id" name="adv_id" type="text" value='{{num._id}}' class="d-none"><br>
-                        <input id="user_id" name="user_id" type="text" value='{{num.user_id}}' class="d-none">
-                        <label>Pet Name: </label><br>
-                        <input id="petName" name="petName" type="text" value='{{num.petName}}' class="form-control" required><br><br>
-                        <label>Pet Category: </label><br>
-                        <input id="petCat" name="petCat" type="text" value='{{num.petCat}}' class="form-control" required><br><br>
-                        <label>Gender: </label><br>
-                        <input id="gender" name="gender" type="text" value='{{num.gender}}' class="form-control" required><br><br>
-                        <label>Color: </label><br>
-                        <input id="color" name="color" type="text" value='{{num.color}}' class="form-control" required><br><br>
-                        <label>Age: </label><br>
-                        <input id="age" name="age" type="text" value='{{num.age}}' class="form-control" required><br><br>
-                        <label>Description: </label><br>
-                        <textarea class="form-control" rows="5" name="description" type="text" required>{{num.description}}</textarea>
-                      </h5>    
-                      
-                        <!--Button for user to update their advertisment-->
-                        <!--<button type="button" onclick="window.location.href='{{url_for('delete_adv', adv_id=num._id)}}'" class=" btn-lg btn-outline-dark">-->
-                        <button type="submit" name="action" class="btn-lg btn-outline-dark">Update Advertisement</button>
-                            
-                        <!--Button for user to go to Delete Advertisement page-->
-                        <button type="button" onclick="window.location.href='{{url_for('delete_adv', adv_id=num._id)}}'" class=" btn-lg btn-outline-dark">Delete</button><br><br><br>
-                  
-                {% endfor %}
-            </div>       
-         </form>
-        
+
+            {% for num in pet%}
+            <div class="border">
+                <h5>
+                    <!-- Hide the user ID and advertisment ID to prevent user to amend it -->
+                    <input id="adv_id" name="adv_id" type="text" value='{{num._id}}' class="d-none"><br>
+                    <input id="user_id" name="user_id" type="text" value='{{num.user_id}}' class="d-none">
+
+                    <!-- Textbox to amend Pet Name -->
+                    <label>Pet Name: </label><br>
+                    <input id="petName" name="petName" type="text" value='{{num.petName}}' class="form-control" required><br><br>
+
+                    <!-- Textbox to amend Pet Category -->
+                    <label>Pet Category: </label><br>
+                    <input id="petCat" name="petCat" type="text" value='{{num.petCat}}' class="form-control" required><br><br>
+
+                    <!-- Textbox to amend Pet Gender -->
+                    <label>Gender: </label><br>
+                    <input id="gender" name="gender" type="text" value='{{num.gender}}' class="form-control" required><br><br>
+
+                    <!-- Textbox to amend color of the pet -->
+                    <label>Color: </label><br>
+                    <input id="color" name="color" type="text" value='{{num.color}}' class="form-control" required><br><br>
+
+                    <!-- Textbox to amend age of the pet-->
+                    <label>Age: </label><br>
+                    <input id="age" name="age" type="text" value='{{num.age}}' class="form-control" required><br><br>
+
+                    <!-- Textarea to amend description of the pet -->
+                    <label>Description: </label><br>
+                    <textarea class="form-control" rows="5" name="description" type="text" required>{{num.description}}</textarea>
+                </h5>
+            </div>
+
+            <!--Button for user to update their advertisment-->
+            <!--<button type="button" onclick="window.location.href='{{url_for('delete_adv', adv_id=num._id)}}'" class=" btn-lg btn-outline-dark">-->
+            <button type="submit" name="action" class="btn-lg btn-outline-dark">Update Advertisement</button>
+
+            <!--Button for user to go to Delete Advertisement page-->
+            <button type="button" onclick="window.location.href='{{url_for('delete_adv', adv_id=num._id)}}'" class=" btn-lg btn-outline-dark">Delete</button><br><br><br> {% endfor %}
+
+        </form>
+
     </div>
     <div class="mb-5"></div>
     <!-- JavaScript -->
@@ -85,5 +101,6 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  </body>
+</body>
+
 </html>
