--- a/templates/searchResult.html
+++ b/templates/searchResult.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
-    
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -12,76 +12,85 @@
     <!-- My Style CSS -->
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/style.css')}}">
 
-    
     <title>A Helping Paw</title>
-  </head>
-  
-  <body>
+</head>
+
+<body>
     <div class="container-fuid bg-light">
-      <div class="container pt-5 pb-4">
-          <div class="row">
-              <div class="col-md-1 d-flex justify-content-center">
-                  <image src ="{{ url_for('static', filename='image/Logo.png')}}" width="100" height="100">
-              </div>
-              <div class="col-md-4 navbar-brand">
-                  <h1>
-                      A Helping Paw
-                  </h1>
-              </div>
-              <div class="col-md-6 col-sm-12 float-md-right"> 
-                  <!--Buttton foruser to go to Homepage-->
-                  <button type="button" onclick="window.location.href='{{url_for('mysearch')}}'" class="btn-lg btn-outline-dark pr-3 float-md-right">Home Page</button>&nbsp &nbsp
-                  
-                  <!--Buttton foruser to go to Sign Up page-->
-                  <button type="button" onclick="window.location.href='{{url_for('add_user')}}'" class="btn-lg btn-outline-dark pr-3 float-md-right">Sign Up</button>&nbsp &nbsp
-                          
-                  <!--Button for user to go to Log In page-->
-                  <button type="button" onclick="window.location.href='{{url_for('login')}}'" class=" btn-lg btn-outline-dark float-md-right">Login</button><br><br>
-              </div>
-          </div>
-      </div>
-    </div>
-    
-    <div class="container-fuid d-flex justify-content-center p-5 mb-5" id="searchCss">
-    <!--Form for user to search for their pets through Pet Category-->
-        <form action="{{url_for('showsearch')}}" method="POST" class ="bg-light p-3">
-            <div>
-                <div class = "d-flex justify-content-center">
-                    <h4>Tell me your ideal pet to adopt:</h4>
-                </div><br>
-                <div class = "row d-flex justify-content-center">
-                    
-                    <input  id="searchPetCat" name="searchPetCat" type="text" required> 
-                  
-                    <button type="submit" name="action" class="btn-lg">Search</image></button>
+        <div class="container pt-5 pb-4">
+            <div class="row">
+
+                <!-- Logo -->
+                <div class="col-md-1 d-flex justify-content-center">
+                    <image src="{{ url_for('static', filename='image/Logo.png')}}" width="100" height="100">
                 </div>
+
+                <!-- Website Name -->
+                <div class="col-md-4 navbar-brand">
+                    <h1>
+                        A Helping Paw
+                    </h1>
+                </div>
+
+                <!-- Navigation Button -->
+                <div class="col-md-6 col-sm-12 float-md-right">
+                    <!--Buttton for user to go to Homepage-->
+                    <button type="button" onclick="window.location.href='{{url_for('mysearch')}}'" class="btn-lg btn-outline-dark pr-3 float-md-right">Home Page</button>&nbsp &nbsp
+
+                    <!--Buttton for user to go to Sign Up page-->
+                    <button type="button" onclick="window.location.href='{{url_for('add_user')}}'" class="btn-lg btn-outline-dark pr-3 float-md-right">Sign Up</button>&nbsp &nbsp
+
+                    <!--Button for user to go to Log In page-->
+                    <button type="button" onclick="window.location.href='{{url_for('login')}}'" class=" btn-lg btn-outline-dark float-md-right">Login</button><br><br>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fuid d-flex justify-content-center p-5 mb-5">
+        <!--Form for user to search for their pets through Pet Category-->
+        <form action="{{url_for('showsearch')}}" method="POST" class="bg-light p-3">
+            <div class="d-flex justify-content-center">
+                <h4>Enter your ideal pet to adopt:</h4>
+            </div><br>
+
+            <div class="row d-flex justify-content-center">
+
+                <!-- Textbox to key in the Pet to search -->
+                <input id="searchPetCat" name="searchPetCat" type="text" required>
+
+                <!-- Button to search for Pet -->
+                <button type="submit" name="action" class="btn-lg">Search</button>
+
             </div>
         </form>
     </div>
-    
+
     <h5>
         <div class="container p-3 bg-light">
-            
+
+            <!-- Display the search based on Pet Category  -->
             {% for num in pet %}
-                <div class="border">
-                    Advertisement ID: {{num._id}} <br>
-                    Pet Name: {{num.petName}} <br>
-                    Pet Category: {{num.petCat}} <br>
-                    Gender: {{num.gender}} <br>
-                    Color: {{num.color}} <br>
-                    Age: {{num.age}} <br>
-                    Description: {{num.description}}<br><br>
-               
-                    {% for row in user %}
-                        {% if num.user_id == row._id %}
-                            Posted by: {{ row.userName }}<br>
-                            Email: {{ row.userEmail }}<br>
-                            Contact: {{ row.userContact }}<br><br><br>
-                        {% endif %}
-                    {% endfor %}  
-                  </div>
+                <div class="border p-4">
+                    Advertisement ID: {{num._id}} <br> 
+                    Pet Name: {{num.petName}} <br> 
+                    Pet Category: {{num.petCat}} <br> 
+                    Gender: {{num.gender}} <br> 
+                    Color: {{num.color}} <br> 
+                    Age: {{num.age}} <br> 
+                    Description: {{num.description}}<br><br> 
+
+                    <!-- Display the person to contact if the ID of the User Collection match the user ID in the Pet Collection -->
+                    {% for row in user %} 
+                        {% if num.user_id == row._id %} 
+                            Posted by: {{ row.userName }}<br> 
+                            Email: {{ row.userEmail }}<br> 
+                            Contact: {{ row.userContact }}<br><br>
+                        {% endif %} 
+                    {% endfor %}
+                </div>
             {% endfor %}
-            
+
         </div><br>
     </h5>
 
@@ -91,5 +100,6 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  </body>
+</body>
+
 </html>
